# gurtpay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  invoice-test.html  payment-test.html
frontend/: ads-advertise.html  ads-dashboard.html  ads-host.html  api-docs.html  business-manage.html  cards.html  dashboard.html  login.html  pay-invoice.html  register-business.html  register.html  send.html
frontend/static/: ads-advertise.lua  ads-bootstrap.lua  ads-dashboard.lua  ads-host.lua  api-docs.lua  app.lua  business-manage.lua  business.lua  cards.lua  dashboard.lua  login.lua  pay-invoice.lua  register.lua  send.lua
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs
