[package]
name = "gurtpay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
gurtlib = { version = "0.1" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
rand = "0.8"
bcrypt = "0.15"
jsonwebtoken = "9.0"
once_cell = "1.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

[profile.release]
opt-level = 3
lto = true
